fixed nav width on small screen

--- a/css/ps_style.css
+++ b/css/ps_style.css
@@ -14,30 +14,36 @@
 [data-background-color="blue"] {
   background-color: #030852;
 }
-
-.sidebar-collapse .navbar-collapse:before {
-  background: #030852;
-  /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#030852 0%, #000 80%);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#030852 0%, #000 80%);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#030852 0%, #000 80%);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#030852 0%, #000 80%);
-  /* Standard syntax (must be last) */
-  opacity: 0.76;
-  filter: alpha(opacity=76);
-  display: block;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
+@media screen and (max-width: 991px) {
+  .sidebar-collapse .navbar-collapse {
+    width: 150px;
+  }
+  .sidebar-collapse .navbar-collapse:before {
+    background: #030852;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#030852 0%, #000 80%);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#030852 0%, #000 80%);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#030852 0%, #000 80%);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#030852 0%, #000 80%);
+    /* Standard syntax (must be last) */
+    opacity: 0.76;
+    filter: alpha(opacity=76);
+    display: block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  .sidebar-collapse [class*="navbar-expand-"] .navbar-collapse {
+    width: 150px;
+  }
 }
-
 .bg-primary {
   background-color: #030852 !important;
 }
